--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 buildCommand = "pip install -r requirements.txt"
 
 [deploy]
-startCommand = "python manage.py migrate && gunicorn myblog.wsgi:application --bind 0.0.0.0:\$PORT"
+startCommand = "python manage.py migrate && gunicorn myblog.wsgi:application --bind 0.0.0.0:$PORT"
 
 [[services]]
 name = "web"
